--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js"
-  },
+  "start": "node api/index.js"
+}
+,
   "dependencies": {
     "axios": "^1.6.2",
     "dotenv": "^16.4.1",
