--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "type": "module",
   "dependencies": {
+    "express": "4.19.2",
     "axios": "^1.6.2",
-    "dotenv": "^16.4.1",
-    "express": "^4.19.2"
+    "dotenv": "^16.4.1"
   }
 }
